fixed blurry images, changed homepage hero

--- a/styles/aboutme.css
+++ b/styles/aboutme.css
@@ -358,7 +358,7 @@ h4 {
 
   .connectText {
     font-size: 2rem;
-    font-weight: 400;
+    font-weight: 300;
     line-height: 1.75em;
     margin: 0 12%;
 
