--- a/styles/cloudedProject.css
+++ b/styles/cloudedProject.css
@@ -932,7 +932,7 @@ h5 {
 
   .connectText {
     font-size: 2rem;
-    font-weight: 400;
+    font-weight: 300;
     margin: 0 12%;
 
   }
